<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/pick_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="showDatePickerDialog"
        android:text="@string/pick_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <RadioGroup
        android:id="@+id/feelingGroup"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/editFeeling"
        app:layout_constraintTop_toBottomOf="@+id/editFeeling">

        <RadioButton
            android:id="@+id/loveButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/love"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="204dp" />

        <RadioButton
            android:id="@+id/joyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/joy"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="204dp" />

        <RadioButton
            android:id="@+id/surpriseButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/surprise"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="204dp" />

        <RadioButton
            android:id="@+id/sadnessButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sadness"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="204dp" />

        <RadioButton
            android:id="@+id/angerButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/anger"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="204dp" />

        <RadioButton
            android:id="@+id/fearButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fear"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="204dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/editFeeling"
        android:layout_width="65dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="Feeling"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="Time"
        app:layout_constraintStart_toEndOf="@+id/feelingGroup"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:text="Comments"
        app:layout_constraintBottom_toTopOf="@+id/comments"
        app:layout_constraintStart_toStartOf="@+id/comments" />

    <EditText
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="244dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLines="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.795"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="311dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@android:string/yes"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>